objects/SVMXC__IOTConfiguration__c.object
<CustomObject>
    <description>IOTConfiguration</description>
    <fields>
        <fullName>SVMXC__Contents__c</fullName>
        <label>Contents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>CompositeKey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IOTConfiguration</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOTConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>